<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="Activity.TreatmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:textColor="#696969"
                android:textSize="1dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/buy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/hint_buy_treatment"
                android:textColor="#696969"
                android:textSize="25dp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="top|left"
                        android:hint="@string/hint_first_name"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="top|left"
                        android:hint="@string/hint_last_name"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="top|left"
                        android:hint="@string/hint_phone"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="top|left"
                        android:hint="@string/hint_city"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:gravity="top|left"
                        android:hint="@string/hint_address"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="150dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="13sp"
                android:padding="8dp"
                android:text="@string/text_shipping_terms" />

            <Button
                android:id="@+id/button_continue"
                style="@style/Button1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/hint_continue_to_payment" />


        </LinearLayout>

    </RelativeLayout>


</ScrollView>